# spatialjoin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.txt  example_id.txt  example_nonself.txt
.github/workflows/: build.yml
evaluation/: Makefile  README.md  spatialjoin-evaluation.py
scripts/: spatialjoin-evaluation.py
sigspatial-reproducibility/: README.md
sigspatial-reproducibility-143/: Makefile  README.md
src/: CMakeLists.txt
src/spatialjoin/: BoxIds.h  CMakeLists.txt  GeometryCache.cpp  GeometryCache.h  InnerOuter.h  IntervalIdx.h  Libgeos.h  OutputWriter.h  SpatialJoinMain.cpp  Stats.h  Sweeper.cpp  Sweeper.h  WKTParse.cpp  WKTParse.h  WktParser.cpp  WktParser.h  _config.h.in
src/spatialjoin/tests/: CMakeLists.txt  TestMain.cpp
src/spatialjoin/tests/datasets/: bawue  boxidfail  boxidfail2  boxidfail3  brandenburg  brandenburg_nonself  brandenburg_test  coastline  coastline2  collectiontests  coverfail  freiburg  multitests  onlyfreiburg  references  simpleareafail  touchfail  touchfail2  touchwayfail
src/util/: JobQueue.h  Misc.h
src/util/geo/: Box.h  Geo.h  Line.h  Polygon.h
src/util/tests/: TestMain.cpp
tsas-reproducibility/: Makefile  README.md
